--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
         "jade": "~1.11.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "~1.9.1",
+        "multer": "^1.4.2",
         "mysql2": "^2.2.5",
         "sequelize": "^6.6.2",
         "sequelize-cli": "^6.2.0"
