--- a/src/package.json
+++ b/src/package.json
@@ -22,7 +22,8 @@
         "multer": "^1.4.2",
         "mysql2": "^2.2.5",
         "sequelize": "^6.6.2",
-        "sequelize-cli": "^6.2.0"
+        "sequelize-cli": "^6.2.0",
+        "taggle": "^1.15.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
